maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:8: error: illegal start of simple expression
  }
  ^